--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
+
+.Toastify__toast--default {
+  @apply text-gray-800 !important;
+}
+
 @tailwind utilities;
